--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="weather-app">
-    <h1>Weather Application</h1>
+    <h1>Weather App</h1>
     <div class="location">
       <input type="text" id="cityInput" placeholder="Enter city">
       <button onclick="fetchWeather()">Search</button>
